# Genetica

./: .gitignore  CMakeLists.txt  Cargo.toml  Genetica.icns  README.md  build.rs  build_macos_app.sh  debug_output.txt  example_kernel_usage.cpp  main.cpp  opencl_example.cpp  opencl_example_kernel.cl  profile.sh  run.sh  test_opencl_vector.cpp  webgpu_example.cpp  webgpu_example_shader.wgsl
.cursor/: settings.json
assets/icons/: dna_highlighted.icns
assets/kernels/: updatePoints.cl
assets/shaders/: blur.frag  blur.glsl  genome.frag  perlin.frag  texture.frag  texture.vert
assets/styles/: index.css  simulationScreen.css
assets/ui/: simulation.html
include/geneticAlgorithm/: environment.hpp  geneticAlgorithm.hpp  genome.hpp  genomeUtils.hpp  individual.hpp  lifeform.hpp  sequencer.hpp  species.hpp
include/geneticAlgorithm/cellParts/: cell.hpp  cellLink.hpp  cellPartInstance.hpp  cellPartSchematic.hpp  cellPartType.hpp  protein.hpp  proteinInstance.hpp  proteinType.hpp  segment.hpp  segmentInstance.hpp  segmentType.hpp
include/geneticAlgorithm/entities/: lifeform.hpp  rock.hpp
include/modules/cuda/: CGPUValue.hpp  GPUGraphicsManager.hpp  GPUValue.hpp  GPUVector.hpp  calculateAffinities.hpp  findNearest.hpp  lifeForm.hpp  logging.hpp  renderLifeForms.hpp  updateBlueprint.hpp  updateCellLinks.hpp  updateCells.hpp  updateGRN.hpp  updatePoints.hpp
include/modules/gpu/: GPUDirectRenderer.hpp  OpenCLManager.hpp  calculateAffinities.hpp  findNearest.hpp  updateBlueprint.hpp  updateCellLinks.hpp  updateCells.hpp  updateGRN.hpp  updatePoints.hpp
include/modules/graphics/: UIManager.hpp  componentManager.hpp  cursorManager.hpp  dragHandler.hpp  fontManager.hpp  functionManager.hpp  shaderManager.hpp  spriteManager.hpp  styleManager.hpp  vertexManager.hpp
include/modules/networks/: networkUtils.hpp  rnn.hpp
include/modules/noise/: noise.hpp  perlin.hpp  random.hpp
include/modules/physics/: constraints.hpp  fluid.hpp  point.hpp
include/modules/quadtree/: quadtree.hpp  quadtreeNode.hpp
include/modules/utils/: GUIUtils.hpp  dragHandler.hpp  fastMath.hpp  floatOps.hpp  genomeUtils.hpp  mapUtils.hpp  mathUtils.hpp  operations.hpp  print.hpp  random.hpp  stringUtils.hpp  vector_functions.hpp  vector_types.hpp
include/modules/verlet/: point.hpp
include/simulator/: Camera.hpp  CameraController.hpp  environment.hpp  planet.hpp  simulator.hpp  windowHelper.hpp
include/simulator/entities/: entity.hpp  lifeform.hpp  rock.hpp
include/simulator/screens/: simulationScreen.hpp
rust/: Cargo.toml  README.md  profile.sh
rust/assets/styles/: index.css
rust/assets/ui/: simulation.css  simulation.html  tailwind.css
rust/src/: main.rs
rust/src/genetic_algorithm/: genetic_algorithm.rs  genome.rs  lifeform.rs  mod.rs  sequencer.rs  species.rs  utils.rs
rust/src/genetic_algorithm/systems/: mod.rs
rust/src/genetic_algorithm/systems/morphology/: compile_grn.rs  effector.rs  gene.rs  gene_regulatory_network.rs  genetic_unit.rs  mod.rs  promoter.rs  regulatory_unit.rs
rust/src/gpu/: bounds_renderer.rs  buffers.rs  device.rs  gpu_vector.rs  grn_converter.rs  mod.rs  pipelines.rs  structures.rs  text_renderer.rs  uniforms.rs
rust/src/gpu/kernels/: cells.wgsl  grn_distances.wgsl  grn_layer.wgsl  links.wgsl  nutrients.wgsl
rust/src/gpu/wgsl/: constants.wgsl  mod.rs  types.wgsl
rust/src/gpu/wgsl/kernels/: cells.wgsl  copy_genomes.wgsl  genome_events.wgsl  grn.wgsl  links.wgsl  mutate_genomes.wgsl  nutrients.wgsl  sequence_grn.wgsl  spawn_cells.wgsl  verlet.wgsl
rust/src/gpu/wgsl/shaders/: cells.wgsl  env_texture.wgsl  links.wgsl  nutrients.wgsl  perlin_noise_texture.wgsl  post_processing.wgsl  text.wgsl  verlet.wgsl
rust/src/gpu/wgsl/utils/: color.wgsl  compute_collisions.wgsl  events.wgsl  genetic_algorithm.wgsl  random.wgsl
rust/src/modules/: mod.rs
rust/src/modules/camera/: mod.rs
rust/src/modules/math/: mod.rs
rust/src/modules/ui/: bounds.rs  drag_handler.rs  mod.rs  text.rs
rust/src/shaders/: bounds.wgsl  cells.wgsl  collisions.wgsl  compute.wgsl  image_texture.wgsl  links.wgsl  nutrients.wgsl  perlin.wgsl  planet_texture.wgsl  post_processing.wgsl  render.wgsl  text.wgsl  ui_rect.wgsl  viewport_texture.wgsl
rust/src/simulator/: application.rs  environment.rs  events.rs  genetic_algorithm.rs  lifeform_registry.rs  mod.rs  planet.rs  renderer.rs  simulator.rs  state.rs
rust/src/ui/: component.rs  layout.rs  manager.rs  mod.rs  parser.rs  renderer.rs  screen.rs  styles.rs
rust/src/ui/components/: component.rs  image.rs  mod.rs  text.rs  view.rs  viewport.rs
rust/src/utils/: mod.rs  strings.rs
rust/src/utils/camera/: mod.rs
rust/src/utils/genetic_algorithm/: mod.rs
rust/src/utils/gpu/: device.rs  gpu_vector.rs  mod.rs  text_renderer.rs
rust/src/utils/math/: mod.rs
rust/src/utils/ui/: mod.rs
src/environments/: environment.hpp
src/environments/fishTank/: fish.cpp  fish.hpp  fishTank.cpp  fishTank.hpp  mapGenerator.cpp  rock.hpp
src/geneticAlgorithm/: environment.cpp  geneticAlgorithm.cpp  genome.cpp  genomeUtils.cpp  individual.cpp  lifeform.cpp  sequencer.cpp  species.cpp
src/geneticAlgorithm/cellParts/: cell.cpp  cellLink.cpp  cellPartInstance.cpp  cellPartSchematic.cpp  cellPartType.cpp  proteinType.cpp  segment.cpp  segmentInstance.cpp  segmentType.cpp
src/geneticAlgorithm/entities/: lifeform.cpp
src/genetic_algorithm/: genome.rs  mod.rs  sequencer.rs
src/genetic_algorithm/systems/: mod.rs
src/gpu/: bounds_renderer.rs  buffers.rs  mod.rs  pipelines.rs  structures.rs  uniforms.rs  water_distortion_renderer.rs
src/gpu/wgsl/: constants.wesl  constants.wgsl  mod.rs  types.wesl  types.wgsl
src/modules/cuda/: CGPUValue.tpp  GPUValue.cpp  GPUValue.tpp  GPUVector.tpp  calculateAffinities.cu  error_check.cu  findNearest.cu  renderLifeForms.cu  updateGRN.cu  (+6 more)
src/simulator/: CameraController.cpp  application.rs  environment.cpp  environment.rs  mod.rs  planet.cpp  planet.rs  poll_thread.rs  renderer.rs  simulator.cpp  simulator.hpp  simulator.rs  state.rs
src/ui/: inheritance.rs  parser.rs  renderer.rs  screen.rs  styles.rs
(+353 files in other folders)
